# front_panel

./: Homie_MQTT.py  Makefile  README.md  TurretSlider.py  bronco.json  launch.sh  login.py  login.rb  login.sh  main.py  mini.json  pi4.json  pi5.json  pyproject.toml  requirements.txt  startup.sh  tblogin.service  tlogin.rb  trumpy.json  trumpy4.json  update.sh
button/: README.md  base+led.v2.scad  base+led.v3.stl  base-normal-v1.stl  test.py
lib/: Homie_MQTT.py  Settings.py  TurretSlider.py
