[project]
name = "tblogin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0.1",
    "imutil>=0.3.4",
    "ollama>=0.5.1",
    "opencv-contrib-python>=4.11.0.86",
    "paho-mqtt>=2.1.0",
    "pillow>=11.2.1",
    "pipewire-python>=0.2.3",
    "pulsectl>=24.12.0",
    "pyaudio>=0.2.14",
    "python-vlc>=3.0.21203",
    "speechrecognition>=3.14.3",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "zmq>=0.0.0",
]
